# p

./: .gitattributes  .gitignore  LICENSE  README.md  final_p6_check.out  install.sh  phase7_after_https.out  phase7_hardening.out  phase7_https_errk.out  phase7_regression.out  pyproject.toml  pytest.ini  pytest_dash.out  pytest_final.out  pytest_full_p7.out  pytest_phase6_full.out  release-artifacts.sha256  ruff.toml  ruff_check.out
.github/workflows/: ci.yml  release.yml
config/: countries.yaml
docs/: ARCHITECTURE.md  COUNTRIES.md  TROUBLESHOOTING.md  XUI_API.md
installer/: README.md  bootstrap.sh  deps.sh  firewall.sh  https_install.sh  panel_install.sh  prepare_user.sh  prompt.sh  psiphon_install.sh
panel/: README.md  __init__.py  __main__.py  auth.py  config.py  db.py  main.py  models.py  seed.py
panel/dashboard/: __init__.py  router.py  xui_client.py
panel/data/: countries.yaml
panel/i18n/: __init__.py  en.json
panel/psiphon/: __init__.py
panel/static/: README.md  dashboard.html  login.html  wizard.html
panel/wizard/: __init__.py  apply.py  clone.py  ports.py  router.py  steps.py  xui_detect.py
plans/: ROADMAP.md
scripts/: sha_artifacts.py  verify_manifest.py
spike/: README.md  spike_1b_probe.py  spike_1c2_capture.py  spike_1c_capture.py  spike_1e_clone.py
systemd/: 49-psiphon-3x-ui.rules  psiphon-3x-ui.service  psiphon-tunnel@.service
tests/: __init__.py  requirements.txt  test_auth.py  test_dashboard.py  test_hardening.py  test_psiphon.py  test_seed.py  test_skeleton.py  test_wizard.py  test_wizard_apply.py  test_wizard_clone.py  test_wizard_xui.py  test_xui_client.py
tests/fixtures/xui/: README.md  vless_clone_add_response.json  vless_template_get.json
